PBD2: fix nullable issues, refactor javadocs